correction recuperation facture avec liaison achat & factures urcoopa

--- a/static/html/validation_copy_copy.html
+++ b/static/html/validation_copy_copy.html
@@ -285,15 +285,15 @@
             <table class="totals-table">
                 <tr>
                     <td><strong>Montant hors taxes</strong></td>
-                    <td><span id="montantHT"></span> $</td>
+                    <td><span id="montantHT"></span> €</td>
                 </tr>
                 <tr>
                     <td>Tax TVA %</td>
-                    <td><span id="tauxTVA"></span> $</td>
+                    <td><span id="tauxTVA"></span> %</td>
                 </tr>
                 <tr class="total-final">
                     <td><strong>Total</strong></td>
-                    <td><span id="montantTTC"></span> $</td>
+                    <td><span id="montantTTC"></span> €</td>
                 </tr>
             </table>
         </div>
